<resources>
    <string name="app_name">Ручной сбор данных</string>
    <string name="begin_work">Начало работы</string>
    <string name="trackmans">Обходчики</string>
    <string name="add_trackman">Добавить обходчика</string>
    <string name="auth">Авторизация</string>
    <string name="new_trackman">Новый обходчик</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="error_pass">Неверный пароль</string>
    <string name="trackman_not_found">Обходчик не найден</string>
    <string name="no_registered_trackmans">Отсутствуют зарегистрированные обходчики. Добавьте нового обходчика</string>
    <string name="loading_list_of_trackmans">Загрузка списка обходчиков</string>
    <string name="available_objects">Доступные объекты</string>
    <string name="take_qr_code">Считать QR код</string>
    <string name="edit_objects_list">Редактировать список объектов</string>
    <string name="edit_params_list">Редактировать список параметров</string>
    <string name="select_params_for_objects">Выбор параметров для объектов</string>
    <string name="object_name">Имя объекта</string>
    <string name="identifier">Идентификатор</string>
    <string name="search_object">Поиск объекта</string>
    <string name="add_new_object">Добавить новый объект</string>
    <string name="enter_name_of_new_object">Введите название нового объекта</string>
    <string name="enter_id_of_new_object">Введите идентификатор нового объекта</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="objects_list">Список объектов</string>
    <string name="settings">Настройки</string>
    <string name="scan_qr_code_or_enter_object_id">Отсканируйте QR код или введите ID объекта</string>
    <string name="new_object_save_success">Новый объект успешно сохранен</string>
    <string name="new_object_save_error">Ошибка при сохранении нового объекта</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="new_param_save_success">Новый параметр успешно сохранен</string>
    <string name="new_param_save_error">Ошибка при сохранении нового параметра</string>
    <string name="devices_params">Параметры устройств</string>
    <string name="add_new_param">Добавить новый параметр</string>
    <string name="param_name">Название параметра</string>
    <string name="param_name_abbr">Парам.</string>
    <string name="meas_unit_abbr">Ед.изм.</string>
    <string name="uid">UID</string>
    <string name="new_param">Новый параметр</string>
    <string name="enter_uid_of_param_for_sync">Введите уникальный идентификатор параметра для синхронизации</string>
    <string name="enter_param_name">Введите название параметра</string>
    <string name="enter_abbr_name">Введите сокращенное название</string>
    <string name="enter_meas_unit">Введите единицу измерения</string>
    <string name="select_data_type">Выберите тип данных</string>
    <string name="selection_params_for_objects">Выбор параметров для объектов</string>
    <string name="select_device">Выберите устройство</string>
    <string name="no_devices">Устройств нет</string>
    <string name="no_associated_params">Нет присвоенных параметров</string>
    <string name="right_arrow"><![CDATA[>>]]></string>
    <string name="left_arrow"><![CDATA[<<]]></string>
    <string name="add_all">Добавить все</string>
    <string name="remove_all">Убрать все</string>
    <string name="loading">Загрузка…</string>
    <string name="save_success">Сохранено успешно</string>
    <string name="save_error">Ошибка при сохранении</string>
    <string name="no_selected_device">Не выбрано устройство</string>
    <string name="qr_scanner">Сканнер QR</string>
    <string name="scanning_process">Процесс сканирования…</string>
    <string name="camera_permission_not_granted">Разрешение на запуск камеры не было предоставлено</string>
    <string name="scanning_status">Статус сканирования:</string>
    <string name="scanning_done">Сканирование завершено</string>
    <string name="device_recognized">Распознано устройство:</string>
    <string name="device_not_recognized">Устройство не распознано!</string>
    <string name="device_guid_name_placeholders">GUID: %1$d NAME: %2$s</string>
    <string name="placeholder_equals_sign">%1$s = </string>
    <string name="enter_values">Ввод значений</string>
    <string name="select_param">Выберите параметр</string>
    <string name="enter_value">Введите значение</string>
    <string name="enter">Ввод</string>
    <string name="device_not_found_in_device_list">Устройство не найдено в списке устройств</string>
    <string name="cross_symbol"><![CDATA[\u2715]]></string>
    <string name="value">Значение</string>
    <string name="parameter">Параметр</string>
    <string name="value_already_entered">Значение уже введено</string>
    <string name="incorrect_value">Некорректное значение</string>
    <string name="list_of_entered_values_empty">Список введенных значений пуст</string>
    <string name="values_save_success">Значения параметров успешно сохранены</string>
    <string name="synchronization_status_pull_up">статус синхронизации: потяните вверх</string>
    <string name="current_trackman">Текущий обходчик:</string>
    <string name="collected_and_transfered">Собрано и передано</string>
    <string name="user_not_selected">Обходчик не выбран</string>
</resources>
<!--изменения в принципе работы со строковыми ресурсами:-->
<!--строковый ресурс именуется просто в виде англоязычного сокращения текста-->
<!--который он обозначает, т.е. как с цветами и размерами - строковые ресурсы это просто некая "палитра"-->
<!--юникод через cdata-->
<!--<string name="cross_symbol"><![CDATA[\u2715]]></string>-->