<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.android.metercollectionapp.presentation.MainFragment"
        android:label="@string/begin_work"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_mainFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_mainFragment_to_objectsListFragment"
            app:destination="@id/objectsListFragment" />
        <action
            android:id="@+id/action_mainFragment_to_deviceParamsListFragment"
            app:destination="@id/deviceParamsListFragment" />
        <action
            android:id="@+id/action_mainFragment_to_deviceParamsSelectFragment"
            app:destination="@id/deviceParamsSelectFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.android.metercollectionapp.presentation.LoginFragment"
        android:label="@string/auth"
        tools:layout="@layout/fragment_login_user">
        <argument
            android:name="user_id"
            app:argType="long" />
        <argument
            android:name="is_new"
            app:argType="boolean" />
        <action
            android:id="@+id/action_loginFragment_to_scanObjectFragment"
            app:destination="@id/selectObjectFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectObjectFragment"
        android:name="com.example.android.metercollectionapp.presentation.SelectObjectFragment"
        android:label="@string/available_objects"
        tools:layout="@layout/fragment_select_object">
        <action
            android:id="@+id/action_selectObjectFragment_to_scannerFragment"
            app:destination="@id/scannerFragment" />
    </fragment>
    <fragment
        android:id="@+id/addObjectFragment"
        android:name="com.example.android.metercollectionapp.presentation.AddObjectFragment"
        android:label="@string/add_new_object"
        tools:layout="@layout/fragment_add_object" >
        <action
            android:id="@+id/action_addObjectFragment_to_scannerFragment"
            app:destination="@id/scannerFragment"
            app:popUpTo="@id/objectsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/objectsListFragment"
        android:name="com.example.android.metercollectionapp.presentation.ObjectsListFragment"
        android:label="@string/objects_list"
        tools:layout="@layout/fragment_objects_list">
        <action
            android:id="@+id/action_objectsListFragment_to_addObjectFragment"
            app:destination="@id/addObjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/deviceParamsListFragment"
        android:name="com.example.android.metercollectionapp.presentation.DeviceParamsListFragment"
        android:label="@string/devices_params"
        tools:layout="@layout/fragment_device_params_list">
        <action
            android:id="@+id/action_deviceParamsListFragment_to_addDeviceParamFragment"
            app:destination="@id/addDeviceParamFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDeviceParamFragment"
        android:name="com.example.android.metercollectionapp.presentation.AddDeviceParamFragment"
        android:label="@string/add_new_param"
        tools:layout="@layout/fragment_add_device_param" />
    <fragment
        android:id="@+id/deviceParamsSelectFragment"
        android:name="com.example.android.metercollectionapp.presentation.DeviceParamsSelectFragment"
        android:label="@string/select_params_for_objects"
        tools:layout="@layout/fragment_device_params_select" />
    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.example.android.metercollectionapp.presentation.ScannerFragment"
        android:label="@string/qr_scanner"
        tools:layout="@layout/fragment_scanner">
        <action
            android:id="@+id/action_scannerFragment_to_writeValuesFragment"
            app:destination="@id/writeValuesFragment"
            app:popUpTo="@id/selectObjectFragment" />
        <argument
            android:name="scanner_feature"
            app:argType="com.example.android.metercollectionapp.presentation.ScannerFeature" />
    </fragment>
    <fragment
        android:id="@+id/writeValuesFragment"
        android:name="com.example.android.metercollectionapp.presentation.WriteValuesFragment"
        android:label="@string/enter_values"
        tools:layout="@layout/fragment_write_values" >
        <argument
            android:name="guid"
            app:argType="long" />
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
</navigation>