<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.metercollectionapp.presentation.AddDeviceParamFragment">

    <data>
        <variable
            name="addDeviceParamViewModel"
            type="com.example.android.metercollectionapp.presentation.viewmodels.AddDeviceParamViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_add_device_param"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tw_data_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:padding="@dimen/space_8"
            android:text="@string/select_data_type"
            android:textAppearance="@style/SubtitleTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_meas_unit" />

        <EditText
            android:id="@+id/et_meas_unit"
            android:layout_width="0dp"
            android:layout_height="?largeEditTextHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:hint="@string/enter_meas_unit"
            android:maxLines="3"
            android:text="@={addDeviceParamViewModel.measUnitLiveData}"
            android:textAppearance="@style/BodyTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_short_name" />

        <EditText
            android:id="@+id/et_short_name"
            android:layout_width="0dp"
            android:layout_height="?largeEditTextHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:hint="@string/enter_abbr_name"
            android:maxLines="3"
            android:text="@={addDeviceParamViewModel.shortNameLiveData}"
            android:textAppearance="@style/BodyTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="?largeEditTextHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:hint="@string/enter_param_name"
            android:maxLines="3"
            android:text="@={addDeviceParamViewModel.nameLiveData}"
            android:textAppearance="@style/BodyTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_uid" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:onClick="@{() -> addDeviceParamViewModel.onSave()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:onClick="@{() -> addDeviceParamViewModel.onCancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_uid"
            android:layout_width="0dp"
            android:layout_height="?largeEditTextHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:hint="@string/enter_uid_of_param_for_sync"
            android:inputType="number"
            android:maxLines="3"
            android:text="@={addDeviceParamViewModel.uidLiveData}"
            android:textAppearance="@style/BodyTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sr_data_type"
            android:layout_width="0dp"
            android:layout_height="?spinnerHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:selectedItemPosition="@={addDeviceParamViewModel.dataTypeLiveData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/et_meas_unit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>