<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.metercollectionapp.presentation.WriteValuesViewModel">

    <data>
        <variable
            name="writeValuesViewModel"
            type="com.example.android.metercollectionapp.presentation.viewmodels.WriteValuesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_write_values"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tw_delete"
            android:layout_width="?attr/largeIconSize"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_4"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/space_4"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:gravity="center"
            android:text="@string/cross_symbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/tw_param_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/space_4"
            android:gravity="end"
            android:text="@string/value"
            android:textAppearance="@style/SubtitleTextAppearance"
            app:layout_constraintEnd_toStartOf="@+id/tw_meas_unit"
            app:layout_constraintStart_toEndOf="@+id/tw_short_param_name"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/tw_short_param_name"
            android:layout_width="?attr/largeFixedColumnWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginTop="@dimen/space_8"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/space_4"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:text="@string/parameter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider4" />

        <TextView
            android:id="@+id/tw_meas_unit"
            android:layout_width="?attr/smallFixedColumnWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/space_4"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:text="@string/meas_unit_abbr"
            app:layout_constraintEnd_toStartOf="@+id/tw_delete"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/tw_param_short_name"
            android:layout_width="0dp"
            android:layout_height="?largeEditTextHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:gravity="center"
            android:textAppearance="@style/SubtitleTextAppearance"
            app:layout_constraintEnd_toStartOf="@+id/et_param_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sr_select_param"
            tools:text="U220 = " />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginTop="@dimen/space_4"
            android:layout_marginEnd="@dimen/space_4"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_param_value" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_values_table"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_param_value">
        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8" />

        <Button
            android:id="@+id/btn_value_enter"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="?attr/largeEditTextHeight"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:text="@string/enter"
            android:onClick="@{() -> writeValuesViewModel.onWrite()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sr_select_param" />

        <EditText
            android:id="@+id/et_param_value"
            android:layout_width="?attr/largeFixedExitTextWidth"
            android:layout_height="?largeEditTextHeight"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:hint="@string/enter_value"
            android:inputType="number"
            android:maxLines="1"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:text="@={writeValuesViewModel.enteredParamValue}"
            app:layout_constraintEnd_toStartOf="@+id/btn_value_enter"
            app:layout_constraintTop_toBottomOf="@+id/sr_select_param" />

        <TextView
            android:id="@+id/tw_object_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@{writeValuesViewModel.uiState.objectUiState.name}"
            android:textAppearance="@style/TitleTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Объект Сыктывкар 1" />

        <TextView
            android:id="@+id/tw_select_param"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:padding="@dimen/space_8"
            android:text="@string/select_param"
            android:gravity="center"
            android:textAppearance="@style/SubtitleTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_object_name" />

        <Spinner
            android:id="@+id/sr_select_param"
            android:layout_width="0dp"
            android:layout_height="?spinnerHeight"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_8"
            android:selectedItemPosition="@={writeValuesViewModel.selectedParamIndex}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_select_param" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>